<resources>
    <string name="app_name">Firebase AdMob Assignment</string>
    <string name="add">ADD</string>
    <string name="enter_user_name_or_student_id">Enter Student Id or User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="function_name">Function Name</string>
    <string name="register_student">Register Student</string>
    <string name="student_fees_Details">Student Fees Details</string>
    <string name="function_icon">Function Icon</string>
    <string name="enter_student_full_name">Enter Student Full Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="list_of_registered_student">List Of Registered Student</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_email_address">Enter Student Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_re_type_password">Enter Re-type Password</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_the_your_address">Enter the your address</string>
    <string name="other">Other</string>
    <string name="student_personal_information">Student personal information</string>
    <string name="enter_birth_date">Enter Birth Date</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="student_education_information">Student Education Information</string>
    <string name="select_course">Select Course :</string>
    <string name="hsc_details">Hsc Details :</string>
    <string name="enter_passing_yer">Enter Passing Year :</string>
    <string name="passing_year">Passing Year</string>
    <string name="enter_hsc_percentage">Enter Hsc Percentage :</string>
    <string name="percentage">Percentage</string>
    <string name="error_full_name">Please Enter Student Name</string>
    <string name="error_phone_number_is_empty">Please Enter Contact Number</string>
    <string name="error_phone_number_valid">Enter Valid Contact Number</string>
    <string name="error_email_is_empty">Please Enter Email Address</string>
    <string name="error_email_valid">Enter valid Email Address</string>
    <string name="error_address">please Enter Address</string>
    <string name="error_birth_is_empty">Please Enter Date of Birth</string>
    <string name="error_passing_year">Enter Hsc Passing  Year</string>
    <string name="error_percentage">Enter Hsc Percentage</string>
    <string name="student_name">Student Name:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="course_name">Course Name:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="student_information">Student Information</string>
    <string name="select_grade">Select Grade:</string>
    <string name="enter_student_total_marks">Enter Student Total Marks</string>
    <string name="error_mark">Please Enter Total Mark</string>
    <string name="student_grade">Student Grade:</string>
    <string name="student_total_mark">Student Total Mark:</string>
    <string name="turn_on_internet">Please Internet Turn On For this Operation</string>
    <string name="student_data_stored">Student Data Added Successfully</string>
    <string name="fail_to_get_data">Fail to get data.</string>
    <string name="no_data_found">No Data Found</string>
    <string name="student_info">Student Info</string>
    <string name="admob">AdMob</string>
    <string name="notification">Notification</string>
    <string name="banner_ads">Banner ads</string>
    <string name="interstitial_ads">Interstitial Ads</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="allow_notification_for_this_app">Allow notification for this app</string>
    <string name="battery_low">Battery Low Please Charge Your Device</string>
    <string name="battery_low_short_description">Your mobile battery is less then 15% please Charge</string>
    <string name="notification_title">Notification Title</string>
    <string name="todo">TODO</string>
    <string name="testing_is_awecome">Testing is awecome</string>
    <string name="testing">Testing</string>
    <string-array name="Grade">
        <item>A+</item>
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>C+</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
    </string-array>

</resources>