<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/chbBannerAds"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/banner_ads"/>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="0dp"
        android:id="@+id/chbInterstitialAds"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chbBannerAds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/interstitial_ads"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chbInterstitialAds"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:layout_marginBottom="10dp"
        android:id="@+id/btnOk"
        android:textSize="20sp"
        android:text="@string/ok"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/chbInterstitialAds"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>