<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomSheet"
    android:background="@drawable/sheet_dialog_background"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/student_information"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvStudentRegistration"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/titStudentName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:startIconTint="@color/black"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tetStudentName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/enter_student_name"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/titMobileNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:startIconTint="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titStudentName">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tetMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLength="10"
                            android:hint="@string/enter_contact_number"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/titTotalMark"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:startIconTint="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titMobileNumber">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tetTotalMark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/enter_student_total_marks"
                            android:inputType="number"
                            android:maxLength="3" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/tvGradeTitle"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/select_grade"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titTotalMark"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:id="@+id/spinnerGrade"
                        app:layout_constraintTop_toTopOf="@id/tvGradeTitle"
                        app:layout_constraintBottom_toBottomOf="@id/tvGradeTitle"
                        app:layout_constraintStart_toEndOf="@id/tvGradeTitle"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddOrUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/register_student"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvStudentRegistration" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>